added svg pictures to header

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         <div class="container">
             <ul class="menu">
                 <li>
-                    <a href="#"><img src="img/home-1-svgrepo-com.svg" alt="" width="24.84" height="23.7">Home</a>
+                    <a href="#"><img src="img/home-1-svgrepo-com.svg" alt="Home" width="20" height="20">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html" target="_blank">Gallery</a>
+                    <a href="gallery.html" target="_blank"><img src="img/gallery-wide-svgrepo-com.svg" alt="Gallery" width="20" height="20">Gallery</a>
                 </li>
                 <li>
-                    <a href="">Homeworks</a>
+                    <a href="">Homeworks <img src="img/arrow-down-svgrepo-com.svg" alt="arrow down" width="20" height="20"></a>
                     <ul class="list">
                         <li><a href="table+site.html" target="_blank">table and site</a></li>
                         <li><a href="inline-block.html" target="_blank">Inline-block</a></li>
                         <li><a href="table-float.html" target="_blank">float</a></li>
-                        <li class="layo"><a href="table-flex.html" target="_blank">Layouts</a>
+                        <li class="layo"><a href="table-flex.html" target="_blank"><img src="img/arrow-left-svgrepo-com.svg" alt="arrow left" width="20" height="20">Layouts</a>
                         <ul class="left"><a href="figma-amelia.html" target="_blank">Flex</a></ul>
                          </li>
                                                                  
@@ -30,7 +30,7 @@
             </ul>
         </div>
     </header>
-  <main></main>
+  <main class="container"></main>
   <footer>
     <ul class="sn">
         <li><a href="https://www.facebook.com/" target="_blank"><img src="img/logo-facebook-svgrepo-com.svg" alt="facebook" width="29" height="29"></a></li>
