coreected svg footer to background

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <div class="container">
             <ul class="menu">
                 <li>
-                    <a href="#"><img src="img/home-1-svgrepo-com.svg" alt="Home" width="20" height="20">Home</a>
+                    <a style="background-image:url(./img/home-1-svgrepo-com.svg);" href="#">Home</a>
                 </li>
                 <li>
-                    <a href="gallery.html" target="_blank"><img src="img/gallery-wide-svgrepo-com.svg" alt="Gallery" width="20" height="20">Gallery</a>
+                    <a class="svg-menu1" href="gallery.html" target="_blank">Gallery</a>
                 </li>
                 <li>
                     <a href="">Homeworks <img src="img/arrow-down-svgrepo-com.svg" alt="arrow down" width="20" height="20"></a>
@@ -33,16 +33,18 @@
   <main class="container"></main>
   <footer>
     <ul class="sn">
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="img/logo-facebook-svgrepo-com.svg" alt="facebook" width="29" height="29"></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.svg" alt="instagram" width="24.84" height="29"></a></li>
-        <li><a href="https://telegram.org" target="_blank"><img src="img/telegram.svg" alt="telegram" width="28.42" height="29"></a></li>
-        <li><a href="https://www.viber.com/" target="_blank"><img src="img/viber.svg" alt="viber" width="22.85" height="29"></a></li>
+        <li><a class="sn1" href="https://www.facebook.com/" ></a></li>
+        <li><a class="sn2" href="https://www.instagram.com/" ></a></li>
+        <li><a class="sn3" href="https://telegram.org" ></a></li>
+        <li><a class="sn4" href="https://www.viber.com/"></a></li>
     </ul>
     <P class="c">© 2023</P>
   </footer>  
 </body>
 </html>
      
-
-
+<!-- <img src="img/logo-facebook-svgrepo-com.svg" alt="facebook" width="29" height="29">
+<img src="img/instagram.svg" alt="instagram" width="24.84" height="29">
+<img src="img/telegram.svg" alt="telegram" width="28.42" height="29">
+<img src="img/viber.svg" alt="viber" width="22.85" height="29">  -->
 
