--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
         <div class="container">
             <ul class="menu">
                 <li>
-                    <a style="background-image:url(./img/home-1-svgrepo-com.svg);" href="#">Home</a>
+                    <a class="m1" href="#">Home</a>
                 </li>
                 <li>
-                    <a class="svg-menu1" href="gallery.html" target="_blank">Gallery</a>
+                    <a class="m2"  href="gallery.html" target="_blank">Gallery</a>
                 </li>
                 <li>
-                    <a href="">Homeworks <img src="img/arrow-down-svgrepo-com.svg" alt="arrow down" width="20" height="20"></a>
+                    <a class="m3" href="">Homeworks</a>
                     <ul class="list">
                         <li><a href="table+site.html" target="_blank">table and site</a></li>
                         <li><a href="inline-block.html" target="_blank">Inline-block</a></li>
                         <li><a href="table-float.html" target="_blank">float</a></li>
-                        <li class="layo"><a href="table-flex.html" target="_blank"><img src="img/arrow-left-svgrepo-com.svg" alt="arrow left" width="20" height="20">Layouts</a>
+                        <li class="layo"><a class="m4" href="table-flex.html" target="_blank">Layouts</a>
                         <ul class="left"><a href="figma-amelia.html" target="_blank">Flex</a></ul>
                          </li>
                                                                  
@@ -43,8 +43,5 @@
 </body>
 </html>
      
-<!-- <img src="img/logo-facebook-svgrepo-com.svg" alt="facebook" width="29" height="29">
-<img src="img/instagram.svg" alt="instagram" width="24.84" height="29">
-<img src="img/telegram.svg" alt="telegram" width="28.42" height="29">
-<img src="img/viber.svg" alt="viber" width="22.85" height="29">  -->
+
 
